[gd_scene load_steps=3 format=3 uid="uid://c6cisgtxor0ye"]

[ext_resource type="Script" uid="uid://bmmbvf7c1ilx0" path="res://scripts/rope.gd" id="1_icxtj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wmsjs"]
radius = 1.0
height = 12.0

[node name="Rope" type="Node2D"]
script = ExtResource("1_icxtj")

[node name="Line2D" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.9607843, 1, 0.9098039, 1)

[node name="Segments" type="Node2D" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="Segments"]
position = Vector2(0, 7)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segments/RigidBody2D"]
shape = SubResource("CapsuleShape2D_wmsjs")

[node name="PinJoint2D" type="PinJoint2D" parent="Segments/RigidBody2D"]
position = Vector2(0, -7)
node_b = NodePath("..")

[node name="RigidBody2D2" type="RigidBody2D" parent="Segments"]
position = Vector2(0, 21)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segments/RigidBody2D2"]
shape = SubResource("CapsuleShape2D_wmsjs")

[node name="PinJoint2D2" type="PinJoint2D" parent="Segments/RigidBody2D2"]
position = Vector2(0, -7)
node_a = NodePath("../../RigidBody2D")
node_b = NodePath("..")

[node name="RigidBody2D3" type="RigidBody2D" parent="Segments"]
position = Vector2(0, 35)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segments/RigidBody2D3"]
shape = SubResource("CapsuleShape2D_wmsjs")

[node name="PinJoint2D3" type="PinJoint2D" parent="Segments/RigidBody2D3"]
position = Vector2(0, -7)
node_a = NodePath("../../RigidBody2D2")
node_b = NodePath("..")

[node name="RigidBody2D4" type="RigidBody2D" parent="Segments"]
position = Vector2(0, 49)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Segments/RigidBody2D4"]
shape = SubResource("CapsuleShape2D_wmsjs")

[node name="PinJoint2D4" type="PinJoint2D" parent="Segments/RigidBody2D4"]
position = Vector2(0, -7)
node_a = NodePath("../../RigidBody2D3")
node_b = NodePath("..")

[node name="PinJoint2D5" type="PinJoint2D" parent="Segments/RigidBody2D4"]
position = Vector2(0, 7)
node_a = NodePath("..")
